--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/sun_mountain.png">
+    
     <title>WeatherTrack</title>
   </head>
 
   <body>
+    <!--<a href="https://www.flaticon.com/free-icons/user-interface" title="user interface icons">User interface icons created by KP Arts - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/user-interface" title="user interface icons">User interface icons created by KP Arts - Flaticon</a>
+  -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
   </body>
 
 </html>
